--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Homework 10</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <!-- <link rel="stylesheet" href="./sass/main.scss" /> -->
 </head>
 
-<body class="light-theme">
+<body>
   <div class="toolbar">
     <!-- Разметка переключателя темы -->
     <div class="theme-switch">
